--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "html-include-external-resources",
+  "bin": "./src/index.js",
   "version": "1.0.0",
   "description": "Helps you include external resource and compiles into a Single HTML page.",
   "main": "index.js",
@@ -7,7 +8,9 @@
   "author": "okNagisa",
   "license": "MIT",
   "private": false,
+  "type": "module",
   "dependencies": {
+    "image-to-base64": "^2.1.1",
     "jsdom": "^16.4.0"
   }
 }
