--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
   "license": "MIT",
   "private": false,
   "type": "module",
+  "scripts": {
+    "lint": "eslint src/*.js --fix"
+  },
   "dependencies": {
     "image-to-base64": "^2.1.1",
-    "jsdom": "^16.4.0"
+    "jsdom": "^16.4.0",
+    "pretty": "^2.0.0",
+    "yargs": "^16.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
