Redirects main files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "version": "1.0.2",
   "description": "Helps include/inline external Script/CSS/Images and compiles into a Single HTML page.",
-  "main": "src/html-inline-external.mjs",
+  "main": "lib/html-inline-external.js",
   "repository": "https://github.com/oknagisa/html-inline-external.git",
   "author": "okNagisa",
   "license": "MIT",
