--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "bin": {
     "html-inline-external": "./bin/cli.js"
   },
+  "files": ["./bin/*", "./lib/*"],
   "version": "1.0.3",
   "description": "Helps include/inline external Script/CSS/Images and compiles into a Single HTML page.",
   "main": "lib/html-inline-external.js",
