--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "bin": {
     "html-inline-external": "./bin/cli.js"
   },
-  "files": ["./bin/*", "./lib/*"],
-  "version": "1.0.3",
+  "files": [
+    "./bin/*",
+    "./lib/*"
+  ],
+  "version": "1.0.4",
   "description": "Helps include/inline external Script/CSS/Images and compiles into a Single HTML page.",
   "main": "lib/html-inline-external.js",
   "repository": "https://github.com/oknagisa/html-inline-external.git",
