chore: bump version

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "files": [
     "lib/**"
   ],
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Helps include/inline external Script/CSS/Images and compiles into a Single HTML page.",
   "main": "lib/html-inline-external.js",
-  "repository": "https://github.com/oknagisa/html-inline-external.git",
-  "author": "okNagisa",
+  "repository": "https://github.com/okrohan/html-inline-external.git",
+  "author": "okrohan",
   "license": "MIT",
   "private": false,
   "scripts": {
